@@ -52,7 +52,6 @@ def line_cuts_bbox(line, bbox):
 
     if n == 1:
         return bbox.contains(line[0][0], line[0][1])
-
     p1 = line[0]
     for p2 in line[1:]:
         segment = (p1, p2)
@@ -359,7 +358,7 @@ The following dimensions are in axes coords
                 for line in hlines:
                     tline = trans.seq_xy_tups(line)
                     aline = [inv(v) for v in tline]
-                    lines.extend(line)
+                    lines.append(aline)
 
         return [vertices, bboxes, lines]
 
